force-app/main/default/objects/Invoices__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AutoPopulateAddress__c</fullName>
        <formula>Customer_Name__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AutoPopulateAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Items</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>